# llm-zoomcamp-hw2

./: .gitignore  AGENTS.md  README.md  agent_traces_pipeline.py  hw2.ipynb  hw4.ipynb  hw_dlt.ipynb  logfire_pipeline.py  main.py  pyproject.toml
hw5/: hw5.ipynb  q1.py  q2.py  q4.py  q5.py  q6.py  starter.py
