[project]
name = "llm-zoomcamp-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "gitsource>=0.0.5",
    "importlib-metadata>=9.0.0",
    "logfire>=3.5.1",
    "minsearch>=0.1.1",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.44.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
